fix: tweak h2 spacing, per design feedback

--- a/src/views/waypoint/home/components/heading/style.module.css
+++ b/src/views/waypoint/home/components/heading/style.module.css
@@ -4,5 +4,5 @@ Unfortunately, these `!important` are necessary to keep styles from #48 from lea
 .h2 {
   font-size: var(--token-typography-heading-2-font-size) !important;
   color: var(--token-color-palette-neutral-700) !important;
-  margin: 24px 0 24px 0 !important;
+  margin: 24px 0 16px 0 !important;
 }
